--- a/video1.html
+++ b/video1.html
@@ -17,11 +17,11 @@
 
     <header>
         
-        <a href="#"><img src="./TempLogo.png" alt="Logo"></a>
+        <a href="index.html"><img src="./TempLogo.png" alt="Logo"></a>
     </header>
 
     <main>
-        <h4>Carte avec point d'intérets</h4>
+        <h4>Histoire du fort</h4>
         <video id="my-video" class="video-js"
         controls preload="auto"
         width="400" height="864" poster="TempLogo.png" data-setup="{}">
