--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     </header>
 
     <main>
-        <h4>Carte avec point d'intérets</h4>
+        <h4>Carte avec points d'intérets</h4>
 
         <div id="map"></div>
         <br>
-        <p id="POI">Les point d'intéret</p>
+        <p id="POI">Les points d'intérets</p>
         <div id="list">
             <button class="poi1">Histoire du fort</button> <br><br>
             <button class="poi2">Un emplacement stratégique</button> <br><br>
