--- a/video1.html
+++ b/video1.html
@@ -17,7 +17,7 @@
 
     <header>
         
-        <a href="index.html"><img src="./TempLogo.png" alt="Logo"></a>
+        <a href="index.html"><img src="./Timeline 1.gif" alt="Logo"></a>
     </header>
 
     <main>
