--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <header>
-        <a href="#"><img src="./TempLogo.png" alt="Logo"></a>
+        <a href="#"><img src="./Timeline 1.gif" alt="Logo"></a>
     </header>
 
     <main>
