--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     </main> 
     
     <footer>
-
+        <p>(c)BenjaminBartecki (c)IUT MMI toulon (C)Région Sud</p>
+        <p>Code source disponible sur <a href="https://github.com/FrSense1/Fort-napoleon">github</a></p>
     </footer>
     
     <script src="code.js"></script>
