--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </main> 
     
     <footer>
-        <p>(c)BenjaminBartecki (c)IUT MMI toulon (C)Région Sud</p>
+        <p>©BenjaminBartecki ©IUT MMI toulon ©Région Sud ©Ville de La-Seyne-Sur-Mer</p>
         <p>Code source disponible sur <a href="https://github.com/FrSense1/Fort-napoleon">github</a></p>
     </footer>
     
