--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Arbutus&display=swap" rel="stylesheet">
 </head>
-
-<body>
-
-    <header>
+ <body onload="device()">
+        <header>
         <a href="#"><img src="./Timeline 1.gif" alt="Logo"></a>
     </header>
 
