--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <div id="map"></div>
         <p id="POI">Les points d'intérets</p>
         <div id="list">
-            <button class="poi1">Histoire du fort</button> <br><br>
-            <button class="poi2">Un emplacement stratégique</button> <br><br>
-            <button class="poi3">Les murailles et glacis</button> <br><br>
-            <button class="poi4">Un point de fuite</button> <br><br>
-            <button class="poi5">La vue sur la mer</button> <br><br>
+            <button class="poi1">Histoire du fort</button> <br>
+            <button class="poi2">Un emplacement stratégique</button> <br>
+            <button class="poi3">Les murailles et glacis</button> <br>
+            <button class="poi4">Un point de fuite</button> <br>
+            <button class="poi5">La vue sur la mer</button> <br>
         </div>
     </main> 
     
