--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
  <body onload="device()">
         <header>
-        <a href="#"><img src="./Timeline 1.gif" alt="Logo"></a>
+        <a href="#"><img src="./logo.gif" alt="Logo"></a>
     </header>
 
     <main>
