--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Arbutus&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="." type="image/x-icon">
 </head>
  <body onload="device()">
         <header>
@@ -20,13 +21,12 @@
         <h4>Carte avec points d'intérets</h4>
 
         <div id="map"></div>
-        <p id="POI">Les points d'intérets</p>
         <div id="list">
-            <button class="poi1">Histoire du fort</button> <br>
-            <button class="poi2">Un emplacement stratégique</button> <br>
-            <button class="poi3">Les murailles et glacis</button> <br>
-            <button class="poi4">Un point de fuite</button> <br>
-            <button class="poi5">La vue sur la mer</button> <br>
+            <button class="poi1">1: Histoire du fort</button> <br>
+            <button class="poi2">2: Un emplacement stratégique</button> <br>
+            <button class="poi3">3: Les murailles et glacis</button> <br>
+            <button class="poi4">4: Un point de fuite</button> <br>
+            <button class="poi5">5:La vue sur la mer</button> <br>
         </div>
     </main> 
     
