--- a/video1.html
+++ b/video1.html
@@ -28,6 +28,7 @@
         <source src="timeline.mp4" type="video/mp4" />
         <p class="vjs-no-js">
         <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+        <button></button>
     
     <footer>
 
