--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </main> 
     
     <footer>
-        <p class="p.special">©BenjaminBartecki ©IUT MMI toulon ©Département Du Var ©Ville de La-Seyne-Sur-Mer</p>
-        <p class="p.special">Code source disponible sur <a href="https://github.com/FrSense1/Fort-napoleon">github</a></p>
+        <p class="Copyright">©BenjaminBartecki ©IUT MMI toulon ©Département Du Var ©Ville de La-Seyne-Sur-Mer</p>
+        <p class="p">Code source disponible sur <a href="https://github.com/FrSense1/Fort-napoleon">github</a></p>
     </footer>
     
     <script src="code.js"></script>
