Passage au one page
bouton retour non fonctionnel

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Arbutus&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="." type="image/x-icon">
+      <link href="https://vjs.zencdn.net/8.22.0/video-js.css" rel="stylesheet" /> <!-- video player source https://www.videojs.com -->
 </head>
  <body onload="device()">
         <header>
@@ -21,6 +22,7 @@
         <h4>Carte avec points d'intérets</h4>
 
         <div id="map"></div>
+        <br />
         <div id="list">
             <button class="poi1">1: Histoire du fort</button> <br>
             <button class="poi2">2: Un emplacement stratégique</button> <br>
